# edgedetector

./: CMakeLists.txt  PROBLEMS  canny.cpp  canny.h  main.cpp  ompSobel.cpp  ompSobel.h  sobel.cpp  sobel.h
Canny/: ompCanny.cpp
Sobel/: Sobel.cpp  ompSobel.cpp
